# dyDXCrpyto

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  bot.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-lint.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: lint.yml  test.yml
cpp/: CMakeLists.txt  benchmark.py  bindings.cpp  build.sh  orderbook.cpp  orderbook.h
deploy/: dydx-bot.service  setup-server.sh
dydx3/: dydx_client.py  errors.py
dydx3/eth_signing/: __init__.py  eth_private_action.py  onboarding_action.py  sign_off_chain_action.py  signers.py  util.py
dydx3/helpers/: db.py  request_helpers.py  requests.py
dydx3/modules/: eth.py  eth_private.py  onboarding.py  private.py  public.py
dydx3/starkex/: conditional_transfer.py  helpers.py  order.py  signable.py  transfer.py  withdrawal.py
examples/: quant_backtest.py  quant_market_maker.py  quant_risk_monitor.py  quant_signals.py
quant/: __init__.py  alerts.py  backtester.py  llm_agent.py  llm_tools.py  market_maker.py  risk_monitor.py  sentiment_signal.py  signals.py  telegram_bot.py  types.py  utils.py
tests/: test_backtester.py  test_helpers.py  test_llm_agent.py  test_market_maker.py  test_orderbook_cpp.py  test_risk_monitor.py  test_signals.py  test_utils.py
